--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 /.next/
 /out/
 
+# turbo
+.turbo
+
 # production
 /build
 
@@ -39,3 +42,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+certificates
