--- a/package.json
+++ b/package.json
@@ -16,27 +16,28 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@firebase/app": "^0.10.17",
-    "@google/generative-ai": "^0.21.0",
-    "dotenv": "^16.4.7",
-    "firebase": "^11.1.0",
-    "next": "15.1.4",
+    "@firebase/app": "^0.10.18",
+    "@genkit-ai/googleai": "^0.9.12",
+    "firebase": "^11.2.0",
+    "framer-motion": "^11.18.1",
+    "genkit": "^0.9.12",
+    "next": "^15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-snowfall": "^2.2.0",
-    "sweetalert2": "^11.15.10"
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.0-beta.9",
-    "@types/node": "^22.10.6",
+    "@types/node": "^22.10.7",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "daisyui": "^5.0.0-beta.1",
     "eslint": "^9",
-    "eslint-config-next": "15.1.4",
+    "eslint-config-next": "^15.1.5",
     "postcss": "^8.5.1",
-    "react-icons": "^5.4.0",
     "tailwindcss": "^4.0.0-beta.9",
     "turbo": "^2.3.3",
     "typescript": "^5"
