--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@firebase/app": "^0.10.18",
     "@genkit-ai/googleai": "^0.9.12",
     "firebase": "^11.2.0",
-    "framer-motion": "^11.18.1",
+    "framer-motion": "^12.0.5",
     "genkit": "^0.9.12",
-    "next": "^15.1.5",
+    "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
@@ -30,16 +30,16 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.0-beta.9",
-    "@types/node": "^22.10.7",
-    "@types/react": "^19",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@types/node": "^22.10.10",
+    "@types/react": "^19.0.8",
     "@types/react-dom": "^19",
-    "daisyui": "^5.0.0-beta.1",
+    "daisyui": "^5.0.0-beta.2",
     "eslint": "^9",
-    "eslint-config-next": "^15.1.5",
+    "eslint-config-next": "^15.1.6",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.0-beta.9",
-    "turbo": "^2.3.3",
+    "tailwindcss": "^4.0.0",
+    "turbo": "^2.3.4",
     "typescript": "^5"
   },
   "packageManager": "npm@11.0.0"
