--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@firebase/app": "^0.10.18",
     "@genkit-ai/googleai": "^0.9.12",
+    "@vercel/og": "^0.6.5",
     "firebase": "^11.2.0",
     "framer-motion": "^12.0.5",
     "genkit": "^0.9.12",
